Revise text .html

--- a/index.html
+++ b/index.html
@@ -762,8 +762,12 @@
 
         <div class="my-6 p-4 rounded-lg bg-white border border-blue-100">
         <p class="text-gray-700">
-            Tư tưởng thống nhất còn được nhấn mạnh trong <em>Di chúc</em> Năm 1958, Người khẳng định: <em>“Nước Việt Nam là một, Nam – Bắc là một nhà.”</em>  .
+            Năm 1958, Người khẳng định: <em>“Nước Việt Nam là một, dân tộc Việt Nam là một.”</em>  .
         </p>
+            <p class="text-gray-700">
+            Tư tưởng thống nhất còn được nhấn mạnh trong <em>Di chúc</em>: <em>"Tổ quốc ta nhất định sẽ thống nhất. Đồng bào Nam Bắc nhất định sẽ sum họp một nhà."</em> .
+        </p>
+            
         </div>
 
         <div class="grid md:grid-cols-3 gap-6 mb-6">
