Update image source in index.html

--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
 
         
         <figure class="mt-8">
-        <img src="https://th.bing.com/th/id/R.3ea25d170b80d55a0c3082350310feed?rik=3zw42QPWDpDFyg&riu=http%3a%2f%2fvideo.laocaitv.vn%2fuploads%2fBH1_1.jpg&ehk=e%2bYNzaAXEytzmLGCefADsXzXfVkFUcwYPNF9Iyd0bo0%3d&risl=&pid=ImgRaw&r=0"
+        <img src="https://upload.wikimedia.org/wikipedia/commons/a/a0/Ho-chi-Minh_with_children_%282%29.jpg"
             class="w-full max-w-2xl mx-auto rounded-2xl shadow-lg"
             alt="Bác Hồ với các cháu thiếu nhi">
         <figcaption>👶 Hồ Chí Minh luôn dành sự quan tâm đặc biệt đến thế hệ tương lai của đất nước.</figcaption>
